--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Coursera</title>
 </head>
 <body>
-	<h1>Hello Coursera</h1>
-	<p>Welcome to this page</p>
+	
+	<h1>Our Menu</h1>
+	<div class="row">
+		<div class="col-lg-4 col-md-6 col-sm-12">
+			<div class="box">
+				<p class="content n1">Chicken</p>
+				<p class="prop">loerm ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore mahna aliqua. ut enium ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			</div>
+		</div>
+		<div class="col-lg-4 col-md-6 col-sm-12">
+			<div class="box">
+				<p class="content n2">Beef</p>
+				<p class="prop">loerm ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore mahna aliqua. ut enium ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			</div>
+		</div>
+		<div class="col-lg-4 col-md-12 col-sm-12">
+			<div class="box">
+				<p class="content n3">Sushi</p>
+				<p class="prop">loerm ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore mahna aliqua. ut enium ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			</div>		
+		</div>
+	</div>
 </body>
 </html>
