--- a/Module4-solution/index.html
+++ b/Module4-solution/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<title>Module 4 Solution</title>
-	<script src="sayHello.js"></script>
+	<script src="sayhello.js"></script>
 	<script src="sayGoodbye.js"></script>
 	<script src="script.js"></script>
 </head>
